refactor: 使用 Stream.toList() 替换 collect(Collectors.toList()) 以符合 Java 16+ 规范